# Week5

sss/: Cargo.toml  README.md
sss/src/: main.rs
sss/src/helper/: mod.rs  secret_generation.rs
sss/src/models/: mod.rs  point.rs
sss/src/polynomial/: generate_shares.rs  mod.rs  polynomial.rs
sss/src/reconstruction/: lagrange.rs  mod.rs  reconstruct_secret.rs
vss/: Cargo.toml  README.md
vss/src/: cli.rs  crypto.rs  main.rs  polynomial.rs
vss/src/commands/: mod.rs  reconstruct.rs  split.rs  verify_secret.rs  verify_share.rs
vss/src/crypto/: feldman.rs  mod.rs  params.rs  polynomial.rs
vss/src/feldman/: dealer.rs  mod.rs  verifier.rs
vss/src/math/: gcd.rs  lagrange.rs  mod.rs
vss/src/reconstruct/: lj_zero.rs  mod.rs  reconstruct.rs
